# cctk

./: .clang-format  .gitignore  Button.hpp  CCTK.cpp  CCTK.hpp  CMakeLists.txt  Doxyfile  DrawingSurfaceI.hpp  Form.hpp  Widget.hpp  WidgetI.hpp  WindowI.hpp  _header_guards_regen.py  _prop_gen.py  _prop_gen.sh  _props_dellall.sh  _props_regen.py  hg_collisions_fix.py  property.hpp  types.hpp
interfaces/: CMakeLists.txt  DrawingSurfaceI.hpp  KeyboardI.hpp  PointerI.hpp  SystemI.hpp  WidgetI.hpp  WindowI.hpp  interfaces.hpp
laf/memphis/: CMakeLists.txt
systems/LinuxWayland2024/: CCTKSysLinuxWayland2024.cpp  CCTKSysLinuxWayland2024.hpp  CMakeLists.txt  DrawingSurface.hpp  System.cctkpdf  System.cpp  System.hpp  WaylandShmCtl.cpp  WaylandShmCtl.hpp  Window.cpp  Window.hpp  _props_System.hpp  _props_Window.cctkpdf  _props_Window.hpp
tests/test01/: CMakeLists.txt  Test01.cpp
types/: CMakeLists.txt  ColorField.cpp  ColorField.hpp  ColorRGB.hpp  Line2d.hpp  Point2d.hpp  Rectangle2d.hpp  types.hpp
utils/: CMakeLists.txt  MemFD.cpp  MemFD.hpp  Property.cpp  Property.hpp  recursionGuard.cpp  recursionGuard.hpp  utils.hpp
